# wp3_d3.2_saferlearn-main

wp3_d3.2_saferlearn-main/: .dockerignore  .editorconfig  .env_template  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  README_demo.md  ROADMAP.md  backup-docker-img.sh  clean.sh  clean_results.sh  create_sample_job.sh  docker-compose.yml  docker-compose_distributed.yml  docker-compose_offline.yml  kafka_docker.yml  main.py  pate-teacher-one-hot.cpp  pate-teacher.cpp  pate_aggregation.mpc  pate_aggregation_one_hot.mpc  pate_aggregation_privacy_guardian.mpc  privacy-guardian.cpp  pyproject.toml  requirements.txt  requirements.txt.old  restore-docker-img.sh  saferlearn.sh  stop.sh  synthetic_inspection_output.txt
wp3_d3.2_saferlearn-main/kafka-docker/test/scenarios/jmx/: docker-compose.yml
wp3_d3.2_saferlearn-main/src/: api.py  computing_party.py  config.py  data_owner_cli.py  db_utilities.py  inspect_synthetic_data.py  local_pate_run.py  model_owner.py  orchestrator.py  saferlearn.py  utilities.py
wp3_d3.2_saferlearn-main/src/usecases/: UC_stub.py  aminer_deep.py  data_owner.backup.py  data_owner_abstract_class.py  data_owner_example.py
